# TechnologiesLabaFifth

./: .gitignore  CMakeLists.txt  Laba_5.cpp  Laba_5_onefile.cpp  README.md  build.bat  build.sh
include/: InputValidator.hpp
src/: main.cpp
